# tradingdatafetcher

./: pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_main.py
tradingdatafetcher/: cli.py  main.py
